--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   awesome_dialog: ^2.1.2
   flutter_svg: ^1.0.3
   google_fonts: ^2.2.0
+  flutter_icons: ^1.1.0
   
 
 dev_dependencies: 
@@ -35,4 +36,6 @@ flutter:
     - assets/images/grooming-card.jpg
     - assets/images/hotel-card.jpg
     - assets/images/petshop-1.jpg
-
+    - assets/images/1.png
+    - assets/images/2.png
+    - assets/images/3.png
