--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,4 +35,5 @@ flutter:
     - assets/images/grooming-card.jpg
     - assets/images/hotel-card.jpg
     - assets/images/petshop-1.jpg
+    - assets/images/petshop-2.jpg
 
