--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_svg: ^1.0.3
   google_fonts: ^2.2.0
   flutter_icons: ^1.1.0
+  favorite_button: ^0.0.4
   
 
 dev_dependencies: 
