--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,5 +37,6 @@ flutter:
     - assets/images/hotel-card.jpg
     - assets/images/petshop-1.jpg
     - assets/images/1.png
-    - assets/images/2.png
     - assets/images/3.png
+    - assets/images/textHalopet.png
+    - assets/images/google1.png
