--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,3 +44,4 @@ flutter:
     - assets/images/tag-hotel.jpg
     - assets/images/tag-grooming.jpg
     - assets/images/tag-vet.jpg
+    - assets/images/profile_icon.png
