--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,18 @@ dependencies:
   google_fonts: ^2.2.0
   flutter_icons: ^1.1.0
   favorite_button: ^0.0.4
+  rename: ^2.0.1
   
 
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_logo.png"    
 
 flutter: 
   uses-material-design: true
