--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,3 +52,4 @@ flutter:
     - assets/images/tag-grooming.jpg
     - assets/images/tag-vet.jpg
     - assets/images/Person-Icon.svg
+    - assets/images/thumb.png
