--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   multi_select_flutter: ^4.0.0
   multiselect_formfield: ^0.1.7
   get_cli: ^1.7.1
+  custom_radio_grouped_button: ^2.1.1
   
 
 dev_dependencies: 
