--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   multiselect_formfield: ^0.1.7
   get_cli: ^1.7.1
   custom_radio_grouped_button: ^2.1.1
+  flutter_rating_bar: ^4.0.0
   
 
 dev_dependencies: 
