--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   get_cli: ^1.7.1
   custom_radio_grouped_button: ^2.1.1
   flutter_rating_bar: ^4.0.0
+
+  timeago: ^3.2.2
   
 
 dev_dependencies: 
