--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,3 +61,5 @@ flutter:
     - assets/images/tag-vet.jpg
     - assets/images/Person-Icon.svg
     - assets/images/thumb.png
+    - assets/images/aero.jpg
+    - assets/images/freddy.jpg
