--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,3 +64,5 @@ flutter:
     - assets/images/thumb.png
     - assets/images/aero.jpg
     - assets/images/freddy.jpg
+    - assets/images/banner1.jpg
+    - assets/images/banner2.jpg
