--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
 
   timeago: ^3.2.2
   carousel_slider: ^4.0.0
+  money_formatter: ^0.0.3
   
 
 dev_dependencies: 
@@ -66,3 +67,7 @@ flutter:
     - assets/images/freddy.jpg
     - assets/images/banner1.jpg
     - assets/images/banner2.jpg
+    - assets/images/6.png
+    - assets/images/7.png
+    - assets/images/8.png
+    - assets/images/9.png
