--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   timeago: ^3.2.2
   carousel_slider: ^4.0.0
   money_formatter: ^0.0.3
+  date_format: ^2.0.6
   
 
 dev_dependencies: 
